@@ -24,6 +24,9 @@ PKG_CHECK_MODULES([LIBCM4ALL_DAEMON], [libcm4all-daemon >= 0.1.2],,
 PKG_CHECK_MODULES([LIBCM4ALL_INLINE], [libcm4all-inline >= 0.1.1],,
 	[AC_MSG_ERROR([libcm4all-inline not found])])
 
+PKG_CHECK_MODULES([LIBCM4ALL_SOCKET], [libcm4all-socket],,
+	[AC_MSG_ERROR([libcm4all-socket not found])])
+
 dnl
 dnl CFLAGS
 dnl
