@@ -6,6 +6,7 @@ Build-Depends: debhelper (>= 7), autoconf (>= 2.60), automake (>= 1.10),
  gcc (>= 4.1), libc6-dev (>= 2.7),
  libevent-dev (>= 1.4.8~), libattr1-dev,
  libcm4all-inline-dev (>= 0.1.2), libcm4all-daemon-dev (>= 0.3),
+ libcm4all-socket-dev,
  texlive, texlive-latex-extra,
  python-central (>= 0.5.6), valgrind,
 Standards-Version: 3.8.0
