@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.5.11) unstable; urgency=low
 
   * build with autotools
+  * use libcm4all-socket
 
  --
 
